--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/galleryFragment2">
+    app:startDestination="@id/galleryFragment">
     <fragment
-        android:id="@+id/galleryFragment2"
+        android:id="@+id/galleryFragment"
         android:name="com.godzuche.unsplashimageapp.ui.gallery.GalleryFragment"
-        android:label="fragment_gallery"
+        android:label="Photo Gallery"
         tools:layout="@layout/fragment_gallery" />
 </navigation>
