refactor and commented out the blur hash decoder...

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -19,6 +19,18 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_unsplash_photo" />
 
+    <ImageView
+        android:id="@+id/imv_connection_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/tv_error"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_connection_error"
+        tools:visibility="visible" />
+
     <ProgressBar
         android:id="@+id/circular_progress_bar"
         android:layout_width="wrap_content"
